[tool.poetry]
name = "adv-2021"
version = "1.0.0"
description = "solutions of Advent of Code 2021"
authors = ["piotr.idzik <vil02@o2.pl>"]
readme = "README.md"
packages = [{include = "solutions"}]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-xdist = "*"
pylint = "*"
flake8 = "*"
coverage = "*"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
