[tool.poetry]
name = "adv-2021"
version = "1.0.0"
description = "solutions of Advent of Code 2021"
authors = ["piotr.idzik <vil02_adv@10g.pl>"]
readme = "README.md"
packages = [{include = "solutions"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"
numpy = "2.5.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "9.1.1"
pytest-xdist = "3.8.0"
pylint = "4.0.6"
flake8 = "7.3.0"
coverage = "7.15.2"
black = "26.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
